# timetabling

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/input/: hard_blocks.json  soft_blocks.json
docs/: ARCHITECTURE.md
migrations/: init.sql
src/timetabling/: config.py  main.py
src/timetabling/api/: __init__.py  errors.py  state.py
src/timetabling/api/routes/: auth.py  preferences.py  problem.py  solver.py
src/timetabling/db/: repository.py  schema.py
src/timetabling/io/: csv_exporter.py  json_loader.py
src/timetabling/models/: domain.py
src/timetabling/solver/: cp_solver.py  evaluator.py  local_search.py
